--- a/index.html
+++ b/index.html
@@ -12,11 +12,19 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <title>LayoutMobile</title>
+    <title>Corso Web Developer - Epicode school</title>
   </head>
   <body>
-    <header></header>
-    <main></main>
+    <header>
+      <img src="./images/logo.png" alt="logo Epicode" />
+    </header>
+    <main>
+      <section>
+        <h1>Corso Web Developer</h1>
+        <p>Smetti di inseguire i titoli, inizia a lavorare. Mentre tutti vogliono arricchire il CV, tu pensa ad arricchire le tue competenze.</p>
+        <button>partiamo!</button>
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
