--- a/index.html
+++ b/index.html
@@ -24,6 +24,26 @@
         <p>Smetti di inseguire i titoli, inizia a lavorare. Mentre tutti vogliono arricchire il CV, tu pensa ad arricchire le tue competenze.</p>
         <button>partiamo!</button>
       </section>
+      <article>
+        <h3>Tutti ti cercheranno</h3>
+        <p>Sono 30.000 in Italia le posizioni di developer scoperte, scegli quella che ti stimola di più.</p>
+        <h3>Lavora dove vuoi</h3>
+        <p>Lavora da casa, in riva al mare o in montagna.</p>
+        <img src="./images/notebook.jpg" alt="notebook&device" />
+        <h3>Scegli il tuo ruolo</h3>
+        <p>Potrai scegliere se essere Azienda, Freelance o Startup.</p>
+        <h3>Lavoro in libertà</h3>
+        <p>Non serve lavorare in ufficio per essere creatori di prodotti digitali.</p>
+      </article>
+      <div>
+        <h2>Epicode garantisce</h2>
+        <p class="italic">"3 mesi intensivi di corso che cambieranno radicalmente la tua vita".</p>
+        <p>Mario Rossi</p>
+        <p class="little">CEO, Epicode</p>
+      </div>
+      <aside>
+        <div></div>
+      </aside>
     </main>
     <footer></footer>
   </body>
