starting footer section

--- a/index.html
+++ b/index.html
@@ -35,16 +35,32 @@
         <h3>Lavoro in libertà</h3>
         <p>Non serve lavorare in ufficio per essere creatori di prodotti digitali.</p>
       </article>
-      <div>
+      <div class="orangeBlock">
         <h2>Epicode garantisce</h2>
         <p class="italic">"3 mesi intensivi di corso che cambieranno radicalmente la tua vita".</p>
         <p>Mario Rossi</p>
         <p class="little">CEO, Epicode</p>
       </div>
       <aside>
-        <div></div>
+        <div>
+          <img src="./images/foto1.jpg" alt="il tuo pc" />
+          <h3>Il tuo PC</h3>
+          <p>Se vuoi diventare developer è l’unico strumento di cui hai bisogno.</p>
+        </div>
+        <div>
+          <img src="./images/foto2.jpg" alt="impara ora" />
+          <h3>Impara ora</h3>
+          <p>Impara da chi diventerai tra qualche anno, e diventa una rockstar come loro.</p>
+        </div>
+        <div>
+          <img src="./images/foto3.jpg" alt="lavora subito" />
+          <h3>Lavora subito</h3>
+          <p>Sappiamo cosa vogliono le aziende, perché lavoriamo con loro.</p>
+        </div>
       </aside>
     </main>
-    <footer></footer>
+    <footer>
+      <h2>Contattaci</h2>
+    </footer>
   </body>
 </html>
