--- a/index.html
+++ b/index.html
@@ -61,6 +61,13 @@
     </main>
     <footer>
       <h2>Contattaci</h2>
+      <ul>
+        <li><i class="fas fa-phone-square-alt"></i><a href="#">(+39) 11223456</a></li>
+        <li><i class="fas fa-envelope-square"></i><a href="#">info@epicode.school</a></li>
+        <li><i class="fas fa-external-link-square-alt"></i>Via Appia 1 - 00100 Roma (RM)</li>
+      </ul>
+      <hr />
+      <p>&copy; 2021. Immagini di <a href="#">Pixabay</a></p>
     </footer>
   </body>
 </html>
