--- a/index.html
+++ b/index.html
@@ -15,15 +15,18 @@
     <title>Corso Web Developer - Epicode school</title>
   </head>
   <body>
+    <!-- NELL'HEADER TROVEREMO IL LOGO SU BANNER NERO -->
     <header>
       <img src="./images/logo.png" alt="logo Epicode" />
     </header>
     <main>
+      <!-- NELLA PRIMA SEZIONE DEL MAIN ABBIAMO DAL TITOLO  AL PULSANTE "PARTIAMO" -->
       <section>
         <h1>Corso Web Developer</h1>
         <p>Smetti di inseguire i titoli, inizia a lavorare. Mentre tutti vogliono arricchire il CV, tu pensa ad arricchire le tue competenze.</p>
         <button>partiamo!</button>
       </section>
+      <!-- NEL TAG ARTICLE ABBIAMO IL CORPO DEL SITO CON ANNESSA FOTO STONDATA -->
       <article>
         <h3>Tutti ti cercheranno</h3>
         <p>Sono 30.000 in Italia le posizioni di developer scoperte, scegli quella che ti stimola di più.</p>
@@ -35,12 +38,14 @@
         <h3>Lavoro in libertà</h3>
         <p>Non serve lavorare in ufficio per essere creatori di prodotti digitali.</p>
       </article>
+      <!-- QUESTO DIV RAPPRESENTA IL BLOCCO ARANCIONE ALL'INTERNO DELLA PAGINA -->
       <div class="orangeBlock">
         <h2>Epicode garantisce</h2>
         <p class="italic">"3 mesi intensivi di corso che cambieranno radicalmente la tua vita".</p>
         <p>Mario Rossi</p>
         <p class="little">CEO, Epicode</p>
       </div>
+      <!-- NELL'ASIDE HO INSERITO LE "CARD"  -->
       <aside>
         <div>
           <img src="./images/foto1.jpg" alt="il tuo pc" />
@@ -59,6 +64,7 @@
         </div>
       </aside>
     </main>
+    <!-- INFINE TROVIAMO IL FOOTER CHE COMPLETA LA PAGINA CON IL BLOCCO BLU ED I VARI CONTATTI -->
     <footer>
       <h2>Contattaci</h2>
       <ul>
