--- a/indexDesktop.html
+++ b/indexDesktop.html
@@ -49,17 +49,17 @@
       </div>
       <!-- NELL'ASIDE HO INSERITO LE "CARD"  -->
       <aside>
-        <div class="box1">
+        <div class="box1 cards">
           <img src="./images/foto1.jpg" alt="il tuo pc" />
           <h3>Il tuo PC</h3>
           <p>Se vuoi diventare developer è l’unico strumento di cui hai bisogno.</p>
         </div>
-        <div class="box2">
+        <div class="box2 cards">
           <img src="./images/foto2.jpg" alt="impara ora" />
           <h3>Impara ora</h3>
           <p>Impara da chi diventerai tra qualche anno, e diventa una rockstar come loro.</p>
         </div>
-        <div class="box3">
+        <div class="box3 cards">
           <img src="./images/foto3.jpg" alt="lavora subito" />
           <h3>Lavora subito</h3>
           <p>Sappiamo cosa vogliono le aziende, perché lavoriamo con loro.</p>
@@ -68,12 +68,14 @@
     </main>
     <!-- INFINE TROVIAMO IL FOOTER CHE COMPLETA LA PAGINA CON IL BLOCCO BLU ED I VARI CONTATTI -->
     <footer>
-      <h2>Contattaci</h2>
-      <ul>
-        <li><i class="fas fa-phone-square-alt"></i><a href="#">(+39) 11223456</a></li>
-        <li><i class="fas fa-envelope-square"></i><a href="#">info@epicode.school</a></li>
-        <li><i class="fas fa-external-link-square-alt"></i>Via Appia 1 - 00100 Roma (RM)</li>
-      </ul>
+      <div>
+        <h2>Contattaci</h2>
+        <ul>
+          <li><i class="fas fa-phone-square-alt"></i><a href="#">(+39) 11223456</a></li>
+          <li><i class="fas fa-envelope-square"></i><a href="#">info@epicode.school</a></li>
+          <li><i class="fas fa-external-link-square-alt"></i>Via Appia 1 - 00100 Roma (RM)</li>
+        </ul>
+      </div>
       <hr />
       <p>&copy; 2021. Immagini di <a href="#">Pixabay</a></p>
     </footer>
